# cureety-backend

./: .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-08-08-152916_users/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs  utils.rs
src/users/: handler.rs  handlers.rs  mod.rs  model.rs  models.rs  response.rs
